<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_service"
        android:autofillHints="enter" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        />

    <EditText
        android:id="@+id/units_sold"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        app:layout_constraintStart_toEndOf="@id/cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="numberDecimal"
        android:hint="@string/units_sold"
        android:autofillHints="enter" />

    <TextView
        android:id="@+id/units_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units_question"
        app:layout_constraintStart_toStartOf="@id/units_sold"
        app:layout_constraintTop_toBottomOf="@id/units_sold"
        />

    <TextView
        android:id="@+id/commission_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commission_header"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        />


    <RadioGroup
    android:id="@+id/tip_options"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/commission_header"
    app:layout_constraintStart_toStartOf="parent"
    android:checkedButton="@id/option_twenty_percent"
    >

    <RadioButton
        android:id="@+id/option_twenty_percent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/amazing_20"
        />



    <RadioButton
        android:id="@+id/option_eighteen_percent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/good_18"
        />

    <RadioButton
        android:id="@+id/option_fifteen_percent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/amazing_15"
        />


</RadioGroup>

    <TextView
        android:id="@+id/state_header"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/state_header"
        app:layout_constraintStart_toStartOf="@id/state_options"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        />


    <RadioGroup
        android:id="@+id/state_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sales_header"
        app:layout_constraintStart_toEndOf="@id/tip_options"
        android:checkedButton="@id/option_NY"
        >

        <RadioButton
            android:id="@+id/option_NY"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/NY_tax"
            />



        <RadioButton
            android:id="@+id/option_NJ"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/NJ_tax"
            />

        <RadioButton
            android:id="@+id/CT"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/CT_tax"
            />


    </RadioGroup>

    <TextView
        android:id="@+id/sales_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_header"
        app:layout_constraintStart_toStartOf="@id/sales_options"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        />


    <RadioGroup
        android:id="@+id/sales_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sales_header"
        app:layout_constraintStart_toEndOf="@id/state_options"
        android:checkedButton="@id/sales_0"
        >

        <RadioButton
            android:id="@+id/sales_0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sales_0"
            />



        <RadioButton
            android:id="@+id/sales_10"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sales_10"
            />

        <RadioButton
            android:id="@+id/sales_50"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sales_50"
            />


    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
    android:id="@+id/gross_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/calculate_button"
    tools:text="@string/gross_amount"/>
    <TextView
        android:id="@+id/comresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gross_result"
        tools:text="@string/Commission_amount"/>
    <TextView
        android:id="@+id/taxresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comresult"
        tools:text="@string/tax_amount"/>
    <TextView
        android:id="@+id/netresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxresult"
        tools:text="@string/net_amount"/>


</androidx.constraintlayout.widget.ConstraintLayout>